--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,8 @@
   <title>Clinic center</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="ovu.ico">
+  <link rel="icon" href="favicon.ico">
 </head>
-
 <body>
   <app-root></app-root>
 </body>
