--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <base href="/">
   <meta charset="utf-8">
+  <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">-->
   <title>Clinic center</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
