--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,12 @@
   <title>Clinic center</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="favicon.ico">
+  <link rel='icon' href='cliniccenter.jpg' type='image/x-icon'/>
 </head>
 <body>
-  <app-root></app-root>
+
+  <app-root>
+
+  </app-root>
 </body>
 </html>
